Fixed capabilities wrap.

--- a/axiome_cloud/css/creative.css
+++ b/axiome_cloud/css/creative.css
@@ -178,7 +178,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background: url(../img/header.jpg) center;
+    background: black url(../img/header.jpg) center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -250,6 +250,10 @@ header .header-content .header-content-inner p {
 @media(min-width:992px) {
     .service-box {
         margin: 20px auto 0;
+    }
+
+    .fix-col-height {
+        height: 205px;
     }
 }
 
